--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-toolbox": "^2.0.0-beta.13"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
